script for training LSTM

--- a/Code/Scripts/configs/lstm_carter_script.yaml
+++ b/Code/Scripts/configs/lstm_carter_script.yaml
@@ -1,8 +1,22 @@
-data_path: "../Data/carter_data_w_gaps.csv"
-parameters_path: "../800_sample_no_carter_models.csv"
-target: "Avg_Chloro"
+data_path: "../Data/d1carter_data_w_gaps.csv"
+parameters_path: "../800_sample_bioluminescent_driver_carter_models.csv"
+target: "Lingulodinium_polyedra"
 bloom_thresh: 5.977
-samp: 3
-n: 500
+samp: 40
+n: 750
 p: 0.2
 forecast_type: lstm
+data_bank_sz: 250
+train_sz: 400
+seq_len: 10
+noisy_prop: 0.5
+noise_pct: 0.03
+batch_sz: 16
+tcn_channel: 64
+atn_hds: 4
+lstm_hd_sz: 16
+lstm_num_lyrs: 2
+dropout: 0.5
+bloom_pen: 1.5
+learning_rate: 0.00001
+save_path: "../Results/Lingulodinium_LSTM.pth"
